# kata_plans_options

./: README.md
trip_budgeting/: pyproject.toml
trip_budgeting/tests/: main_test.py
trip_budgeting/trip_budgeting/: itinerary.py  main.py
