[tool.poetry]
name = "trip-budgeting"
version = "0.1.0"
description = ""
authors = ["Dtzz81 <denise.turkova@madetech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.5.1"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
